# data-center-water-footprint

./: .gitignore  0_scrape_datacenters_com.ipynb  1_data_etl.ipynb  2_energy_and_water_use_analysis.ipynb  3_water_scarcity_assessment.ipynb  4_figures.ipynb  README.md  pyproject.toml
functions/: __init__.py  project_settings.py
functions/data_etl/: __init__.py  cleaning.py  file_io.py  geocoding.py  imputation.py  merging.py  web_scraping.py
functions/data_etl/scrapy/: scrapy.cfg
functions/data_etl/scrapy/datacenters_com/: items.py  middlewares.py  pipelines.py  settings.py
functions/data_etl/scrapy/datacenters_com/spiders/: datacenters_com.py
functions/energy_and_water_use/: __init__.py  climate_zones.py  direct_energy_water_use.py  indirect_water_use.py  regression_analysis.py
functions/figures/: __init__.py  figures.py
functions/water_scarcity/: __init__.py  analysis.py  pcrglobwb_processing.py
